# obsidian-ai-assistant

./: README.md
.github/workflows/: generate-signing-key.yml  release.yml
옵시디언-AI-비서-v3.0-Tauri/: README.md  Streamlit_제거.bat  config.schema.json  package.json
옵시디언-AI-비서-v3.0-Tauri/assets/: app_icon.icns
옵시디언-AI-비서-v3.0-Tauri/src/: app.js  index.html  styles-theme.css  styles.css
옵시디언-AI-비서-v3.0-Tauri/src-tauri/: Cargo.toml  tauri.conf.json
옵시디언-AI-비서-v3.0-Tauri/src-tauri/capabilities/: default.json
옵시디언-AI-비서-v3.0-Tauri/src-tauri/icons/: icon.icns
옵시디언-AI-비서-v3.0-Tauri/src-tauri/src/: ai.rs  config.rs  error.rs  lib.rs  main.rs  scraper.rs  vault.rs
옵시디언-AI-비서-v3.0-Tauri/src/components/: rag.js  tabs.js  updater.js
옵시디언-AI-비서-v3.0-Tauri/tauri-docs/: 빌드방법.md  사용설명서.md
